--- a/.env
+++ b/.env
@@ -3,4 +3,5 @@ GENERATE_SOURCEMAP=false
 
 ## Backend API URL
 PUBLIC_URL = https://mantisdashboard.io/free
-VITE_APP_BASE_NAME = /free
+VITE_APP_BASE_NAME = /
+ENDPOINT_URL = http://localhost:5734/api/
