--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "mantis-free-react-admin-template",
   "version": "1.3.0",
   "private": true,
-  "homepage": "https://mantisdashboard.io/free",
+  "homepage": "https://mantisdashboard.io/",
   "author": {
     "name": "CodedThemes",
     "email": "codedthemes@gmail.com",
     "url": "https://codedthemes.com/"
   },
   "scripts": {
-    "start": "vite",
+    "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
@@ -30,9 +30,11 @@
     "@mui/lab": "^5.0.0-alpha.167",
     "@mui/material": "^5.15.12",
     "@mui/system": "^5.15.12",
+    "@reduxjs/toolkit": "^2.2.4",
     "@svgr/webpack": "^8.1.0",
     "@vitejs/plugin-react": "^4.2.1",
     "apexcharts": "^3.49.0",
+    "axios": "^1.6.8",
     "formik": "^2.4.5",
     "framer-motion": "^11.0.8",
     "lodash": "^4.17.21",
@@ -44,10 +46,13 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-number-format": "^5.3.3",
+    "react-redux": "^9.1.2",
     "react-router": "^6.22.3",
-    "react-router-dom": "^6.22.3",
+    "react-router-dom": "^6.23.1",
+    "redux": "^5.0.1",
     "simplebar-react": "^3.2.4",
     "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.11.0",
     "swr": "^2.2.5",
     "util": "^0.12.5",
     "vite": "^5.2.10",
@@ -91,6 +96,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.0",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "msw": "^2.3.0",
     "prettier": "^3.2.5",
     "react-error-overlay": "6.0.11"
   }
